test/tests/stages/8_loops/valid/do_while_break_immediate.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  do
  break
  ;
  while
  (
  (
  identifier(a)
  =
  const int(1)
  )
  )
  ;
  return
  identifier(a)
  ;
  }
